--- a/views/editor.jade
+++ b/views/editor.jade
@@ -87,6 +87,6 @@ body
             input#entityKey.text(type="text")
           dt Value:
           dd
-            input.entityValue.text(type="text")
+            input#entityValue.text(type="text")
 
     #zoomIndicator 1x
